css/style.css
@import url(fonts.css);

html, body {
    margin: 0;
    padding: 0;
    height: 100%;
    width: 100%;
    font-family: Rubik;
    font-size: 16px;
    scroll-behavior: smooth;
}
::-webkit-scrollbar {
    width: 0;
    background-color: transparent;
}
.scrollable-content {
    scrollbar-width: none;
}
a {
    color: #d9dee8;
    text-decoration: none;
}

/*HOME*/
#home {
    height: 100vh;
    width: 100%;
    position: relative;
    overflow: hidden;
}
#home img {    
    position: absolute;
    width: 100%;
    height: 100%;
    object-fit: cover;
}
#fg {
    z-index: 2;
}
#home-text {
    width: 100%;
    top: 28%;
    display: flex;
    align-items: center;
    flex-direction: column;
    position: relative;
    text-align: center;
}
#home h1 {
    color: #2f343f;
    margin: 0 auto 10px auto;
    font-size: max(min(7vw, 90px), 40px); 
}
#home p {
    color: #4e5669;
    font-family: Barlow;
    font-size: max(min(3vw, 35px), 20px);
    height: fit-content;
    width: fit-content;
    margin: 8px 4px;
    padding: 4px 14px;
    border: 2px solid #4e5669;
    z-index: 1;
}
#home .circle {
    width: max(9vw, 60px);
    height: max(9vw, 60px);
    background: #86a0bf;
    border-radius: 50%;
    position: absolute;
    mix-blend-mode: lighten;
    z-index: 1;
}
#home a {
    padding-top: 60px;
    position: absolute;
    bottom: 60px;
    left: 50%;
    color: #eceff4;
    transform: translate(0, -80%);
    transition: .3s;
    z-index: 2;
}
#home a span {
    display: inline-block;
    position: relative;
    width: max(min(2vw, 30px), 20px);
    height: max(min(2vw, 30px), 20px);
    border-left: max(min(0.15vw, 2px), 1px) solid #eceff4;
    border-bottom: max(min(0.15vw, 2px), 1px) solid #eceff4;
    transform: rotate(-45deg);
    transition: border-left .4s, border-bottom .4s;
}
#home a span:hover {
    border-left: max(min(0.15vw, 2px), 1px) solid #86a0bf;
    border-bottom: max(min(0.15vw, 2px), 1px) solid #86a0bf;
}

/*ABOUT*/
#about {
    background-color: #2f343f;
    padding: 8vh 0 2vh 0;
}
#about .row {
    position: relative;
    margin: 0;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 8%;
}
#about .row div {
    margin: 2vh 0;
}
#about .graphics {
    flex-basis: 10%;
    min-width: 256px;
    flex-grow: 1;
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}
#about .roundimg {
    width: 80%;
}
#about .graphics img {
    clip-path: circle();
    width: 100%;hr {
        width: max(25%, 400px);
    }
    height: 100%;
}
.icons {
    width: 80%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    position: relative;
}
.icons div {
    flex-basis: 30%;
}
.icons div a {
    border-radius: 50%;    
    padding: 0 20px;
    margin: 0;
    font-size: 40px;
    width: 50px;
    text-align: center;
}
#about .row .text {
    flex-basis: 30%;
    min-width: 256px;
    max-width: 750px;
    margin-top: 4vh;
    margin-bottom: auto;
    flex-grow: 1;
}
#about h1 {
    color: #d9dee8;
    font-family: Barlow;
    font-weight: 18;
    font-size: 26px;
    margin: 0;
    padding: 0;
    height: fit-content;
    width: fit-content;
    padding: 4px 14px;
    border: 2px solid #d9dee8;
}
#about p {
    margin: 30px 0;
    color: #d9dee8;
}
#resume {
    height: fit-content;
    width: fit-content;    
    padding: 4px 8px;
    border: 2px solid #d9dee8;
    margin-top: 10px;
    position: absolute;
    font-size: 18px;
    font-weight: lighter;
    letter-spacing: 1px;
}

/* reduce the row margins on mobile devices*/
@media (max-width: 900px) {
    #about {
        padding: 8vh 0;
    }
    #about .row {
        flex-direction: column;
        gap: 0;
    }
    #about .roundimg {
        max-width: 50vw;
    }


}

/*PROJECTS*/
#projects {
    background-color: #d9dee8;
    height: 80vh;
    padding: 8vh 0;
}
#projects h1 {
    color: #4e5669;
    font-family: Barlow;
    font-weight: 18;
    font-size: 26px;
    margin: 0;
    padding: 0;
    height: fit-content;
    width: fit-content;
    padding: 4px 14px;
    border: 2px solid #4e5669;

    margin-left: auto;
    margin-right: auto;
    left: 0;
    right: 0;
}
#projects h2 {
    margin: auto;
    width: fit-content;
    padding: 5vh 0;
    letter-spacing: 1vw;
}

